--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ repositories {
 }
 
 dependencies {
+    compile group: 'se.sics', name: 'ace', version: '0.0.1-SNAPSHOT'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
